new Book button with styling

--- a/src/app/book/book-overview/book-overview.component.html
+++ b/src/app/book/book-overview/book-overview.component.html
@@ -9,3 +9,7 @@
     </mat-card>
   </li>
 </ul>
+
+<button mat-fab (click)="newBook()" class="floating-button">
+    <mat-icon aria-label="Add a new book">plus_one</mat-icon>
+</button>
