--- a/src/app/book/book-overview/book-overview.component.html
+++ b/src/app/book/book-overview/book-overview.component.html
@@ -1,15 +1,18 @@
 <ul class="book-card-container">
-  <li *ngFor="let book of books$ | async" (click)="showBook(book)">
+  <li *ngFor="let book of (books$ | async)" (click)="showBook(book)">
     <mat-card class="book-card">
       <mat-card-title-group>
-        <mat-card-title>{{book.title}}</mat-card-title>
-        <img class="book-card-img" [src]="'http://covers.openlibrary.org/b/isbn/' + book.isbn + '-S.jpg'" />
-        <mat-card-subtitle>{{book.author}}</mat-card-subtitle>
+        <mat-card-title>{{ book.title }}</mat-card-title>
+        <img
+          class="book-card-img"
+          [src]="'http://covers.openlibrary.org/b/isbn/' + book.isbn + '-S.jpg'"
+        />
+        <mat-card-subtitle>{{ book.author }}</mat-card-subtitle>
       </mat-card-title-group>
     </mat-card>
   </li>
 </ul>
 
 <button mat-fab (click)="newBook()" class="floating-button">
-    <mat-icon aria-label="Add a new book">plus_one</mat-icon>
+  <mat-icon aria-label="Add a new book">plus_one</mat-icon>
 </button>
