Implement a declarative Authorization concept in the Books App

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <section class="app-container">
+  <mat-card class="admin-menu">Anonymous
+    <mat-slide-toggle (change)="slideUpdate($event)">Admin</mat-slide-toggle>
+  </mat-card>
   <app-toolbar (menuToggle)="sidenav.toggle()"></app-toolbar>
   <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #sidenav mode="side">
